<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:key="notifications_category"
            app:iconSpaceReserved="false"
            app:title="@string/settings_notifications">

        <SwitchPreferenceCompat
                app:defaultValue="false"
                app:iconSpaceReserved="false"
                app:key="notification"
                app:title="@string/enable_notifications" />

        <SwitchPreferenceCompat
                app:defaultValue="false"
                app:dependency="notification"
                app:iconSpaceReserved="false"
                app:key="notification_details"
                app:title="@string/show_meteorological_details" />

        <ListPreference
                app:defaultValue="20"
                app:dependency="notification"
                app:entries="@array/notification_intensity_entries"
                app:entryValues="@array/notification_intensity_values"
                app:iconSpaceReserved="false"
                app:key="notification_intensity"
                app:title="@string/intensity_threshold"
                app:useSimpleSummaryProvider="true" />

        <ListPreference
                app:defaultValue="15"
                app:dependency="notification"
                app:entries="@array/notification_time_entries"
                app:entryValues="@array/notification_time_values"
                app:iconSpaceReserved="false"
                app:key="notification_time"
                app:title="@string/notification_timeframe"
                app:useSimpleSummaryProvider="true" />

        <Preference
                app:iconSpaceReserved="false"
                app:key="notifications_footer"
                app:layout="@layout/preference_footer"
                app:selectable="false"
                app:singleLineTitle="false" />
    </PreferenceCategory>

    <PreferenceCategory
            app:iconSpaceReserved="false"
            app:title="@string/settings_map_view">

        <SwitchPreferenceCompat
                app:defaultValue="true"
                app:iconSpaceReserved="false"
                app:key="map_rotate"
                app:title="@string/two_finger_rotation" />

        <SwitchPreferenceCompat
                app:defaultValue="false"
                app:iconSpaceReserved="false"
                app:key="map_zoom"
                app:title="@string/auto_zoom_after_start" />

        <ListPreference
                app:defaultValue="system"
                app:entries="@array/base_layer_entries"
                app:entryValues="@array/base_layer_values"
                app:iconSpaceReserved="false"
                app:key="base_layer"
                app:title="@string/base_map_layer" />

        <ListPreference
                app:defaultValue="classic"
                app:entries="@array/radar_color_mapping_entries"
                app:entryValues="@array/radar_color_mapping_values"
                app:iconSpaceReserved="false"
                app:key="radar_color_mapping"
                app:title="@string/radar_color_map"
                app:useSimpleSummaryProvider="true" />

        <Preference
                app:iconSpaceReserved="false"
                app:layout="@layout/preference_footer"
                app:selectable="false"
                app:summary="@string/colormap_explanation" />
    </PreferenceCategory>

    <PreferenceCategory
            app:iconSpaceReserved="false"
            app:title="@string/settings_about">

        <Preference
                app:iconSpaceReserved="false"
                app:key="github"
                app:title="@string/contribute_on_github" />

        <Preference
                app:iconSpaceReserved="false"
                app:key="feedback"
                app:title="@string/feedback_and_support" />

        <Preference
                app:iconSpaceReserved="false"
                app:key="privacy"
                app:title="@string/imprint_privacy" />

        <Preference
                app:iconSpaceReserved="false"
                app:key="share"
                app:title="@string/share_title" />

        <Preference
                app:iconSpaceReserved="false"
                app:key="mode"
                app:persistent="false"
                app:title="@string/mode" />

        <Preference
                app:iconSpaceReserved="false"
                app:key="version"
                app:selectable="false" />
    </PreferenceCategory>

    <PreferenceCategory
            app:iconSpaceReserved="false"
            app:key="data_sources"
            app:title="@string/data_sources_header" />
</androidx.preference.PreferenceScreen>
